[gd_scene load_steps=2 format=3 uid="uid://bc7jv2og75d4i"]

[ext_resource type="Script" uid="uid://bq5jsprhmayx2" path="res://scripts/continue.gd" id="1_ksaq2"]

[node name="Continue" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ksaq2")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_bottom = 0.0222222
offset_left = 64.0
offset_top = 64.0
offset_right = 1216.0
offset_bottom = 640.0
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainerTop" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContinueLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainerTop"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 168
text = "CONTINUE"

[node name="CenterContainerBottom" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CounterLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainerBottom"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 172
text = "9"

[node name="ContinueTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
